Current location marker added to the map section. Sample pie chart added to the graph section.

--- a/GoogleMapTest/app/src/main/AndroidManifest.xml
+++ b/GoogleMapTest/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBzm5FTa-HJU0hQx4P6TMo29m2rTA7Lplw" />
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
     </application>
 
 </manifest>
